test/files/neg/bug910.check
bug910.scala:4: error: type mismatch;
 found   : Seq[Char]
 required: scala.Seq[Int]
    val y: Seq[Int] = rest
                      ^
one error found
